--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <b>Ivan Lopes</b>
           </h1>
           <div class="content has-text-justified">
-            <p>I am a fourth year PhD student at INRIA Paris, directed by <a href="https://team.inria.fr/rits/membres/raoul-de-charette/">Raoul de Charette</a>. My research interests are on material estimation and image editing. I received a MSc degree from Telecom SudParis. Previously, I did an exchange program at Telecom Paris and Linköping University.</p>
+            <p>I am a fourth year PhD student at INRIA Paris, directed by Raoul de Charette. I am completing my PhD with research focused on computer graphics, material estimation, and controllable image generation. I received a MSc degree from Telecom SudParis. Previously, I spent a semester abroad at Linköping University, followed by an exchange program at Telecom Paris.</p>
 
             <a class="external-link button is-dark" href="mailto:ivan(dot)lopes(at)inria(dot)fr">
               <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
@@ -82,7 +82,62 @@
 
 
       <h2 class="title is-3 mb-2">Publications</h2>
-      <h3 class="mb-6">Check <a target="_blank" class="external-link" href="https://scholar.google.com/citations?hl=en&user=pqtYnl4AAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> for the full list.</h3>
+      <!-- <h3 class="mb-6">Check <a target="_blank" class="external-link" href="https://scholar.google.com/citations?hl=en&user=pqtYnl4AAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> for the full list.</h3> -->
+      <h3 class="mb-6"></h3>
+
+      <div class="publication-block columns">
+
+        <div class="column is-3">
+          <div class="publication-image ">
+
+            <img alt="" src="media/matswap.png">
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="content">
+
+            <h3 class="publication-title">
+              <span>MatSwap: Light-aware Material Transfers in Images</span>
+            </h3>
+
+            <div class="publication-authors">
+              <span class="author-block author-me">
+                Ivan Lopes,
+              </span>
+              <span class="author-block ">
+                <a href="https://valentin.deschaintre.fr/">Valentin Deschaintre</a>,
+              </span>
+              <span class="author-block ">
+                <a href="https://yannickhold.com/">Yannick Hold-Geoffroy</a>,
+              </span>
+              <span class="author-block ">
+                <a href="https://team.inria.fr/rits/membres/raoul-de-charette/">Raoul de Charette</a>
+              </span>
+            </div>
+
+            <div class="publication-venue">
+              <span>Eurographics Symposium on Rendering (<b>CGF</b>), 2025</span>
+            </div>
+
+            <p class="publication-description mb-0">MatSwap enables photorealistic transfer of a given material onto a target surface in an image, handling complex interactions of appearance, geometry, and lighting without requiring manual input or UV mapping.</p>
+
+            <!-- <div class="publication-links buttons field has-addons">
+              <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2411.08037">
+                <span class="icon"><i class="ai ai-arxiv"></i></span>
+                <span>arXiv</span>
+              </a>
+
+              <a class="external-link button is-small is-ghost" href="https://github.com/astra-vision/BRDFTransform">
+                <span class="icon"><i class="fa fab fa-github"></i></span>
+                <span>Code</span>
+              </a>
+            </div> -->
+
+          </div>
+        </div>
+      </div>
+
 
       <div class="publication-block columns">
 
@@ -113,7 +168,7 @@
             </div>
 
             <div class="publication-venue">
-              <span>Eurographics Conference (<b>EG</b>), 2025</span>
+              <span>Eurographics Conference (<b>CGF</b>), 2025</span>
             </div>
 
             <p class="publication-description mb-0">A method to transfer material transformations across scenes. Building on disentangled NeRF representations, our approach learns to map Bidirectional Reflectance Distribution Functions (BRDF) from pairs of scenes observed in varying conditions.</p>
@@ -328,7 +383,7 @@
         <div class="content"><b>Academic services</b>:
           <ul class="mt-2">
             <li>2024: ECCV, SIGGRAPH Asia </li>
-            <li>2025: CVPR, ICCV, ACM TOG</li>
+            <li>2025: CVPR (<a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer">Outstanding Reviewer</a>), ICCV, TOG, NeurIPS</li>
           </ul>
         </div>
       </div>
