--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
       <h2 class="title is-3 mb-2">Publications</h2>
-      <!-- <h3 class="mb-6">Check <a target="_blank" class="external-link" href="https://scholar.google.com/citations?hl=en&user=pqtYnl4AAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> for the full list.</h3> -->
+      <h3 class="mb-6">Check <a target="_blank" class="external-link" href="https://scholar.google.com/citations?hl=en&user=pqtYnl4AAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> for the full list.</h3>
       <h3 class="mb-6"></h3>
 
       <div class="publication-block columns">
@@ -122,17 +122,22 @@
 
             <p class="publication-description mb-0">MatSwap enables photorealistic transfer of a given material onto a target surface in an image, handling complex interactions of appearance, geometry, and lighting without requiring manual input or UV mapping.</p>
 
-            <!-- <div class="publication-links buttons field has-addons">
-              <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2411.08037">
+            <div class="publication-links buttons field has-addons">
+              <a class="external-link button is-small is-ghost" href="https://diglib.eg.org/bitstream/handle/10.1111/cgf70168/cgf70168.pdf">
+                <span class="icon"><i class="fas fa-newspaper"></i></span>
+                <span>CGF</span>
+              </a>
+
+              <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2502.07784">
                 <span class="icon"><i class="ai ai-arxiv"></i></span>
                 <span>arXiv</span>
               </a>
 
-              <a class="external-link button is-small is-ghost" href="https://github.com/astra-vision/BRDFTransform">
+              <a class="external-link button is-small is-ghost" href="https://github.com/astra-vision/MatSwap">
                 <span class="icon"><i class="fa fab fa-github"></i></span>
-                <span>Code</span>
+                <span>Code (soon)</span>
               </a>
-            </div> -->
+            </div>
 
           </div>
         </div>
@@ -156,9 +161,8 @@
             </h3>
 
             <div class="publication-authors">
-              <span class="author-block author-me">
-                Ivan Lopes,
-              </span>
+              <span class="author-block is-underlined">
+                Ivan Lopes</span>,
               <span class="author-block ">
                 <a href="https://vision.gel.ulaval.ca/~jflalonde/">Jean-François Lalonde</a>,
               </span>
@@ -174,6 +178,11 @@
             <p class="publication-description mb-0">A method to transfer material transformations across scenes. Building on disentangled NeRF representations, our approach learns to map Bidirectional Reflectance Distribution Functions (BRDF) from pairs of scenes observed in varying conditions.</p>
 
             <div class="publication-links buttons field has-addons">
+              <a class="external-link button is-small is-ghost" href="https://onlinelibrary.wiley.com/share/author/IUVFX5BHWPBADTXEBEKR?target=10.1111/cgf.70008">
+                <span class="icon"><i class="fas fa-newspaper"></i></span>
+                <span>CGF</span>
+              </a>
+
               <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2411.08037">
                 <span class="icon"><i class="ai ai-arxiv"></i></span>
                 <span>arXiv</span>
@@ -181,7 +190,7 @@
 
               <a class="external-link button is-small is-ghost" href="https://github.com/astra-vision/BRDFTransform">
                 <span class="icon"><i class="fa fab fa-github"></i></span>
-                <span>Code</span>
+                <span>Code (soon)</span>
               </a>
             </div>
 
@@ -203,9 +212,8 @@
             <h3 class="publication-title">Material Palette: Extraction of Materials from a Single Image</h3>
             <div class="publication-authors">
 
-              <span class="author-block author-me">
-                Ivan Lopes
-              </span>,
+              <span class="author-block is-underlined">
+                Ivan Lopes</span>,
 
               <span class="author-block ">
                 <a href="https://fabvio.github.io/">Fabio Pizzati</a>,
@@ -267,9 +275,8 @@
             </h3>
 
             <div class="publication-authors">
-              <span class="author-block author-me">
-                Ivan Lopes,
-              </span>
+              <span class="author-block is-underlined">
+                Ivan Lopes</span>,
               <span class="author-block ">
                 <a href="https://tuanhungvu.github.io/">Tuan-Hung Vu</a>,
               </span>
@@ -287,7 +294,7 @@
             <div class="publication-links buttons field has-addons">
               <a class="external-link button is-small is-ghost" href="https://openaccess.thecvf.com/content/WACV2023/html/Lopes_Cross-Task_Attention_Mechanism_for_Dense_Multi-Task_Learning_WACV_2023_paper.html">
                 <span class="icon"><i class="fas fa-newspaper"></i></span>
-                <span>Paper</span>
+                <span>CVF</span>
               </a>
 
               <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2206.08927">
@@ -324,9 +331,8 @@
               <span class="author-block ">
                 Hugo Caroubalos,
               </span>
-              <span class="author-block author-me">
-                Ivan Lopes
-              </span>
+              <span class="author-block is-underlined">
+                Ivan Lopes</span>,
             </div>
 
             <div class="publication-venue">
@@ -358,7 +364,7 @@
           <div class="content">
             <h3 class="publication-title">Codegraph: Node-based programming editor</h3>
             <div class="publication-authors">
-              <span class="author-block author-me">
+              <span class="author-block is-underlined">
                 Ivan Lopes
               </span>
             </div>
