--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
             </div>
 
             <div class="publication-venue">
-              <span>Eurographics Symposium on Rendering (<b>CGF</b>), 2025</span>
+              <span>Computer Graphics Forum (<b>CGF</b>), 2025</span>
+            </div>
+
+            <div class="publication-venue">
+              <span style="color:#c6583a">Best Paper Honorable Mention at EGSR 2025</span>
             </div>
 
             <p class="publication-description mb-0">MatSwap enables photorealistic transfer of a given material onto a target surface in an image, handling complex interactions of appearance, geometry, and lighting without requiring manual input or UV mapping.</p>
@@ -172,7 +176,7 @@
             </div>
 
             <div class="publication-venue">
-              <span>Eurographics Conference (<b>CGF</b>), 2025</span>
+              <span>Computer Graphics Forum (<b>CGF</b>), 2025</span>
             </div>
 
             <p class="publication-description mb-0">A method to transfer material transformations across scenes. Building on disentangled NeRF representations, our approach learns to map Bidirectional Reflectance Distribution Functions (BRDF) from pairs of scenes observed in varying conditions.</p>
