--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <b>Ivan Lopes</b>
           </h1>
           <div class="content has-text-justified">
-            <p>I am a fourth year PhD student at INRIA Paris, directed by Raoul de Charette. I am completing my PhD with research focused on computer graphics, material estimation, and controllable image generation. I received a MSc degree from Telecom SudParis. Previously, I spent a semester abroad at Linköping University, followed by an exchange program at Telecom Paris.</p>
+            <p>I am a Research Intern at Disney Research|Studios and hold a PhD from INRIA in Paris, directed by Raoul de Charette. My doctoral work involved extensive collaboration, allowing me to draw my own path between computer vision and graphics. My research focuses on material estimation from images and controllable image generation.
+            My academic training began in physics and engineering sciences, and I transitioned to computer science during engineering school. I received an MSc degree from Télécom SudParis after a master's program at Télécom Paris, and completed an exchange semester abroad at Linköping University.</p>
 
             <a class="external-link button is-dark" href="mailto:ivan(dot)lopes(at)inria(dot)fr">
               <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
@@ -139,7 +140,7 @@
 
               <a class="external-link button is-small is-ghost" href="https://github.com/astra-vision/MatSwap">
                 <span class="icon"><i class="fa fab fa-github"></i></span>
-                <span>Code (soon)</span>
+                <span>Code</span>
               </a>
             </div>
 
@@ -329,7 +330,7 @@
 
         <div class="column">
           <div class="content">
-            <h3 class="publication-title">Snabbare: Singleplayer car racing game in C</h3>
+            <h3 class="publication-title">Snabbare: Singleplayer car racing game</h3>
 
             <div class="publication-authors">
               <span class="author-block ">
@@ -376,7 +377,7 @@
             <div class="publication-venue">
               <span>Personal project, 2020</span>
             </div>
-            <p class="publication-description mb-0">Proof of concept project for a node-based editor to create code with a visual interface.</p>
+            <p class="publication-description mb-0">Proof of concept project for a node-based editor to create systems with a visual interface.</p>
 
             <div class="publication-links buttons field has-addons">
               <a class="external-link button is-small is-ghost" href="https://github.com/wonjunior/codegraph">
